--- a/users/package.json
+++ b/users/package.json
@@ -20,6 +20,7 @@
     "@nestjs/microservices": "8.4.4",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.4.4",
+    "@nestjs/terminus": "^8.0.6",
     "@nestjs/throttler": "2.0.1",
     "@prisma/client": "3.12.0",
     "class-transformer": "0.5.1",
